# netsketch

./: Cargo.toml  README.md  blag.md  build_wasm.sh  serve.sh
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml  README.md
frontend/src/: drawcanvas.rs  lib.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs  prelude.rs
src/: lib.rs  main.rs
static/: .gitignore  index.html
