[package]
name = "netsketch_backend"
version = "0.1.0"
authors = ["John Pham <jhnphm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsketch_shared = {path = "../shared"}
futures = "^0.3.5"
pretty_env_logger = "^0.4.0"
tokio = { version = "^0.2", features = ["macros"] }
warp = "^0.2"
bincode = "1.3.1"
flate2="^1.0.16"
