[package]
name = "netsketch_frontend"
version = "0.1.0"
authors = ["John Pham <jhnphm@gmail.com>"]
edition = "2018"
repository = "https://github.com/jhnphm/netsketch"
license = "GPL-3.0-or-later"
description = "Frontend crate for netsketch drawing app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
netsketch_shared = {path = "../shared"}
yew = "^0.17"
anyhow = "^1"
wasm-bindgen = "^0.2.65"
web-sys = { version = "^0.3.42", features = [
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "EventTarget"
]}
rand = {version = "^0.7", features = [
    "wasm-bindgen"
]}
