[package]
name = "netsketch_shared"
version = "0.1.0"
authors = ["John Pham <jhnphm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
flate2="^1.0.16"
serde = { version = "^1.0.114", features = ["derive"] }
